Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/6359949/T6359949a.out
T6359949a.java:15:5: compiler.err.static.methods.cannot.be.annotated.with.override
1 error
